--- a/assets/erp/index.html
+++ b/assets/erp/index.html
@@ -140,9 +140,14 @@
         <div class="grid">
             <a href="vitrine.html" class="card">
                 <i class="fas fa-shopping-basket"></i>
-                <h3>Produtos e Serviços</h3>
+                <h3>vitrine</h3>
             </a>
-
+            
+            <a href="pdv.html" class="card">
+                <i class="fas fa-shopping-basket"></i>
+                <h3>pdv</h3>
+            </a>
+            
             <a href="entidades.html" class="card">
                 <i class="fas fa-users"></i>
                 <h3>Gestão de Entidades</h3>
