--- a/assets/erp/pdv.html
+++ b/assets/erp/pdv.html
@@ -139,7 +139,14 @@ checarAutenticacao();
     </div>
 </div>
 
+<div class="fixed top-4 left-4 z-[110] no-print">
+    <a href="index.html" class="flex items-center gap-2 bg-white text-gray-700 px-4 py-2 rounded-lg shadow-md border border-gray-200 hover:bg-gray-50 transition-all font-bold text-sm">
+        <i class="fas fa-arrow-left text-indigo-500"></i>
+        Voltar ao Início
+    </a>
+</div>
 
+    
 </footer>
 
 <script>
