--- a/assets/erp/pdv.html
+++ b/assets/erp/pdv.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@100..700,0..1&display=swap" rel="stylesheet"/>
     
-    <link rel="stylesheet" href="pdv_style.css">
+    <link rel="stylesheet" href="pdv/pdv.css">
 </head>
 
 <body class="bg-[#f6f7f8] dark:bg-background-dark min-h-screen pb-48">
@@ -68,6 +68,6 @@
         </div>
     </footer>
 
-    <script src="pdv_script.js"></script>
+    <script src="pdv/pdv.js"></script>
 </body>
 </html>
