--- a/assets/erp/index.html
+++ b/assets/erp/index.html
@@ -5,122 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISTEMA ERP ABP - Inicio</title>
     
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
-    <link rel="stylesheet" href="index/style.css">
+<link rel="stylesheet" href="css/index.css">
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 
-    <style>
-        /* Configurações Gerais */
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f4f7f6;
-            margin: 0;
-            padding-top: 80px; /* Espaço para a navbar fixa */
-        }
-
-        /* Grid de Cards */
-        .content {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
-
-        .card {
-            background: white;
-            padding: 30px;
-            border-radius: 12px;
-            text-align: center;
-            text-decoration: none;
-            color: #333;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
-            transition: all 0.3s ease;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            border: 1px solid #e2e8f0;
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 15px rgba(0,0,0,0.1);
-            border-color: #3ecf8e;
-        }
-
-        .card i {
-            font-size: 2.5rem;
-            color: #3ecf8e;
-            margin-bottom: 15px;
-        }
-
-        .card h3 {
-            font-size: 1.1rem;
-            margin: 0;
-        }
-
-        /* Navbar Styles */
-        .navbar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background: white;
-            padding: 15px 25px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            z-index: 1000;
-            box-sizing: border-box;
-        }
-
-        .nav-buttons {
-            display: flex;
-            gap: 15px;
-        }
-
-        .btn-nav {
-            background: #ef4444;
-            color: white !important;
-            padding: 8px 15px;
-            border-radius: 6px;
-            font-weight: bold;
-            font-size: 14px;
-            border: none;
-            cursor: pointer;
-            transition: 0.3s;
-            text-decoration: none;
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-        }
-
-        .btn-home {
-            background: #3ecf8e !important;
-        }
-    </style>
-
-    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-    <script>
-        const supabaseUrl = 'https://eisruaetsqrratemqswv.supabase.co';
-        const supabaseKey = 'SUA_KEY_AQUI'; // Use sua chave real aqui
-        const _supabase = supabase.createClient(supabaseUrl, supabaseKey);
-        window.supabaseClient = _supabase;
-
-        async function checarAutenticacao() {
-            const { data: { session }, error } = await window.supabaseClient.auth.getSession();
-            if (error || !session) {
-                window.location.href = "login.html";
-            }
-        }
-        checarAutenticacao();
-    </script>
 </head>
 <body>
 
@@ -165,13 +54,6 @@
         </div>        
     </div>
 
-    <script>
-        async function sairDaConta() {
-            if(confirm("Deseja realmente sair do sistema?")) {
-                await _supabase.auth.signOut();
-                window.location.href = 'login.html';
-            }
-        }
-    </script>
+
 </body>
 </html>
