--- a/assets/erp/financeiro.html
+++ b/assets/erp/financeiro.html
@@ -51,7 +51,10 @@
 
         <div class="section-title">Classificação</div>
         <div class="form-grid">
+            
             <div><label>Entidade</label><select id="entidade_id"><option value="">Selecione...</option></select></div>
+             <script src="js/carregar_entidades.js"></script>
+            
             <div><label>Categoria</label><input type="text" id="categoria"></div>
             <div><label>Forma Pagto</label><input type="text" id="forma_pagamento"></div>
         </div>
