--- a/assets/erp/financeiro.html
+++ b/assets/erp/financeiro.html
@@ -52,8 +52,15 @@
         <div class="section-title">Classificação</div>
         <div class="form-grid">
             
-            <div><label>Entidade</label><select id="entidade_id"><option value="">Selecione...</option></select></div>
-             <script src="js/carregar_entidades.js"></script>
+  <!-- CARREGAR ENTIDADES -->
+  <div class="mb-3">
+  <label for="entidade_id" class="block text-sm font-medium text-gray-700">Entidade (Cliente/Fornecedor)</label>
+  <select id="entidade_id" name="entidade_id" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">
+  <option value="">Carregando entidades...</option>
+  </select>
+  </div>
+  <script src="js/carregar_entidades.js"></script> 
+  <!-- FIM CARREGAR ENTIDADES -->
             
             <div><label>Categoria</label><input type="text" id="categoria"></div>
             <div><label>Forma Pagto</label><input type="text" id="forma_pagamento"></div>
