--- a/assets/erp/pdv-completo.html
+++ b/assets/erp/pdv-completo.html
@@ -67,7 +67,7 @@
             </button>
         </div>
     </footer>
-
-    <script src="pdv/pdv.js"></script>
+    <script src="pdv/supabase_config.js"></script>
+    <script src="pdv/pdv2.js"></script>
 </body>
 </html>
