--- a/assets/erp/index.html
+++ b/assets/erp/index.html
@@ -59,7 +59,10 @@
                 <h3>pdv</h3>
             </a>
             
-            
+             <a href="testes.html" class="card">
+                <i class="fas fa-shopping-basket"></i>
+                <h3>testes</h3>
+            </a>
 
 <!-- fim cardes do menu-->         
 </div>        
