--- a/assets/erp/testes.html
+++ b/assets/erp/testes.html
@@ -6,11 +6,12 @@
     <title>Login - ERP ABP</title>
     <script src="https://cdn.tailwindcss.com"></script>    
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-
+    <link href="css/navbar.css" rel="stylesheet">
     <!-- ############################################################################# --> 
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <script src="js/supabase_config.js"></script>
     <script src="js/validar_acesso.js"></script>
+    <script src="js/navbar.js"></script>
     <!-- ############################################################################# --> 
   
 </head>
