--- a/assets/erp/testes.html
+++ b/assets/erp/testes.html
@@ -33,7 +33,16 @@
     </div>
     <script src="js/navbar.js"></script>
 <!-- FIM DA NAVBAR -->
-    
+
+    <!-- CARREGAR ENTIDADES -->
+  <div class="mb-3">
+    <label for="entidade_id" class="block text-sm font-medium text-gray-700">Entidade (Cliente/Fornecedor)</label>
+    <select id="entidade_id" name="entidade_id" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">
+        <option value="">Carregando entidades...</option>
+    </select>
+  </div>
+  <script src="js/carregar_entidades.js"></script> 
+  <!-- FIM CARREGAR ENTIDADES -->
   
 <div class="relative w-full mb-4">
     <label class="block text-sm font-medium text-gray-700 font-bold mb-1">Buscar Entidade (Nome, CPF, Relação...)</label>
