--- a/assets/erp/teste.html
+++ b/assets/erp/teste.html
@@ -12,7 +12,7 @@
     <script src="js/supabase_config.js"></script>
     <script src="js/validar_acesso.js"></script>
 </head>
-<body class="bg-gray-100 p-6">
+<body>
     
     <div class="max-w-xl mx-auto bg-white p-6 rounded-lg shadow-md">
         <h2 class="text-xl font-bold mb-6 text-emerald-600 border-b pb-2">Teste de Busca de Entidades</h2>
