--- a/assets/erp/teste.html
+++ b/assets/erp/teste.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 
+<p> jaghsdgh </p>
 <!-- BUSCA UNIVERSAL -->
 <div class="componente-busca" data-tabela="entidades">
     <label>Cliente:</label>
