Update and rename teste.html to testes.html

--- a/assets/erp/testes.html
+++ b/assets/erp/testes.html
@@ -28,7 +28,19 @@
     </div>
 <!-- FIM DA NAVBAR -->
  
-
+ <div class="table-container">
+        <table>
+            <thead>
+                <tr>
+                    <th>Nome / Tipo</th>
+                    <th>Telefone / E-mail</th>
+                    <th>Acesso / Status</th>
+                    <th>Ações</th>
+                </tr>
+            </thead>
+            <tbody id="entities-list"></tbody>
+        </table>
+    </div>
     
   <!-- ############################################################################# --> 
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
