--- a/assets/erp/testes.html
+++ b/assets/erp/testes.html
@@ -62,7 +62,7 @@
     <script src="js/supabase_config.js"></script>
     <script src="js/validar_acesso.js"></script>
      <script src="js/navbar.js"></script>
-    <script src="js/listar_entidades.js"></script> 
+    <script src="js/entidades.js"></script> 
   <!-- ############################################################################# -->    
     
 </body>
