--- a/assets/erp/financeiro.html
+++ b/assets/erp/financeiro.html
@@ -55,17 +55,19 @@
 
 <!-- BUSCA UNIVERSAL ############################################## -->
 <div class="componente-busca" data-tabela="entidades">
-  <label>Cliente:</label>
-  <div class="flex gap-2">
-    <input type="text" class="input-busca-texto" readonly>
-    <button type="button" class="btn-disparar-busca">Buscar</button>
-    <input type="hidden" class="id-selecionado-hidden" name="cliente_id">
-  </div>
+<label>Cliente:</label>
+<div class="flex gap-2">
+<input type="text" class="input-busca-texto border p-2 w-full">
+<button type="button" class="btn-disparar-busca bg-blue-500 text-white px-3">Buscar</button>
+<input type="hidden" class="id-selecionado-hidden" name="cliente_id">
 </div>
-
-<script src="js/componente_buscar_universal.js"></script>
-
-<!-- FIM DA BUSCA UNIVERSAL ####################################### -->      
+<ul class="lista-resultados-suspensa hidden border absolute bg-white w-full z-50"></ul>
+</div>
+<!-- repete a dive se quizer colocar mais de uma tabela troca apenas o  data-tabela="nome_da_tabela "-->
+<script src="js/buscar_universal.js"></script>
+<link rel="stylesheet" href="css/busca_universal.css">  
+<!-- FIM DA BUSCA UNIVERSAL ####################################### -->
+   
 
  
             
