--- a/assets/erp/pdv.html
+++ b/assets/erp/pdv.html
@@ -14,6 +14,7 @@
 </head>
 <body class="bg-gray-100 font-sans">
 <!-- NAVBAR -->
+<link rel="stylesheet" href="css/navbar.css">
     <div class="navbar">
         <div style="font-weight: bold; color: #0f172a; font-size: 1.2rem;">
             <i class="fas fa-chart-line" style="color: #3ecf8e;"></i> ERP ABP
