--- a/assets/erp/pdv.html
+++ b/assets/erp/pdv.html
@@ -116,7 +116,7 @@
     <script src="js/supabase_config.js"></script>
     <script src="js/validar_acesso.js"></script>
      <script src="js/navbar.js"></script>
-    <script src="js/pdv.js"></script> 
+    <script src="js/pdv_trez.js"></script> 
   <!-- ############################################################################# -->   
 </body>
 </html>
