--- a/assets/erp/login.html
+++ b/assets/erp/login.html
@@ -6,7 +6,15 @@
     <title>Login - ERP ABP</title>
     <script src="https://cdn.tailwindcss.com"></script>    
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-       <link href="css/style.css" rel="stylesheet">
+    <style>
+        /* Estilos baseados na estrutura do projeto e classes utilizadas */
+        body { font-family: 'Inter', sans-serif; }
+        .glass {
+            background: rgba(15, 23, 42, 0.8);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+    </style>
 </head>
 <body class="bg-slate-950 text-white flex items-center justify-center min-h-screen p-4">
     <div class="glass p-8 rounded-2xl w-full max-w-md shadow-2xl">
@@ -14,48 +22,135 @@
             <h1 class="text-3xl font-black tracking-tighter text-blue-500">ERP ABP</h1>
             <p class="text-slate-400 text-sm">Acesse sua conta para gerenciar seus PDFs</p>
         </div>
-<!--
-        <button onclick="loginComGoogle()" class="w-full py-3 mb-6 bg-white text-black font-bold rounded-xl flex items-center justify-center gap-2 hover:bg-slate-200 transition-all">
-            <img src="https://www.google.com/favicon.ico" class="w-4 h-4" alt="Google icon"> 
-            Entrar com Gmail
-        </button>
--->
+
         <div class="relative mb-6 text-center border-b border-slate-800">
             <span class="absolute top-[-10px] left-1/2 -translate-x-1/2 bg-slate-950 px-2 text-xs text-slate-500 uppercase tracking-widest">ou e-mail</span>
         </div>
+
         <div class="space-y-4">
-    <div>
-        <label class="block text-xs font-bold mb-1 text-slate-400 uppercase">E-mail</label>
-        <input type="email" id="email" placeholder="seu@email.com" class="w-full bg-slate-900 border-slate-700 rounded-xl p-3 focus:ring-2 focus:ring-blue-500 outline-none transition-all">
+            <div>
+                <label class="block text-xs font-bold mb-1 text-slate-400 uppercase">E-mail</label>
+                <input type="email" id="email" placeholder="seu@email.com" class="w-full bg-slate-900 border-slate-700 rounded-xl p-3 focus:ring-2 focus:ring-blue-500 outline-none transition-all">
+            </div>
+            <div class="relative">
+                <label class="block text-xs font-bold mb-1 text-slate-400 uppercase">Senha</label>
+                <input type="password" id="password" placeholder="••••••••" class="w-full bg-slate-900 border-slate-700 rounded-xl p-3 focus:ring-2 focus:ring-blue-500 outline-none transition-all">
+                <button type="button" onclick="alternarSenha()" class="absolute right-3 top-8 text-slate-500 hover:text-white">
+                    🔒
+                </button>
+            </div>
+            <div class="text-right">
+                <button onclick="solicitarRecuperacao()" class="text-xs text-blue-400 hover:underline">Esqueceu a senha?</button>
+            </div>
+            <div class="flex gap-3 pt-2">
+                <button onclick="realizarLogin()" class="flex-1 py-3 bg-blue-600 hover:bg-blue-700 text-white font-bold rounded-xl transition-all shadow-lg shadow-blue-900/20">
+                    ENTRAR
+                </button>
+                <button onclick="confirmarCadastro()" class="flex-1 py-3 border border-slate-700 hover:bg-slate-800 text-white font-bold rounded-xl transition-all">
+                    CADASTRAR
+                </button>
+            </div>
+        </div>
     </div>
-    <div class="relative">
-        <label class="block text-xs font-bold mb-1 text-slate-400 uppercase">Senha</label>
-        <input type="password" id="password" placeholder="••••••••" class="w-full bg-slate-900 border-slate-700 rounded-xl p-3 focus:ring-2 focus:ring-blue-500 outline-none transition-all">
-        <button type="button" onclick="alternarSenha()" class="absolute right-3 top-8 text-slate-500 hover:text-white">
-            🔒
-        </button>
-    </div>
-    <div class="text-right">
-        <button onclick="solicitarRecuperacao()" class="text-xs text-blue-400 hover:underline">Esqueceu a senha?</button>
-    </div>
-    <div class="flex gap-3 pt-2">
-        <button onclick="realizarLogin()" class="flex-1 py-3 bg-blue-600 hover:bg-blue-700 text-white font-bold rounded-xl transition-all shadow-lg shadow-blue-900/20">
-            ENTRAR
-        </button>
-        <button onclick="confirmarCadastro()" class="flex-1 py-3 border border-slate-700 hover:bg-slate-800 text-white font-bold rounded-xl transition-all">
-            CADASTRAR
-        </button>
-    </div>
-</div>
-    </div>
-    <!-- ############################################################################# --> 
+
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-    <script src="js/supabase_config.js"></script>
-    <script src="js/alternar_senha.js"></script>
-    <script src="js/realizar_login.js"></script>
-    <script src="js/realizar_cadastro.js"></script>
-    <script src="js/recuperar_senha.js"></script>
-    <script src="js/login_google.js"></script>
-    <!-- ############################################################################# --> 
+    <script>
+        // Os scripts abaixo foram extraídos das seções de JavaScript do arquivo original
+
+        // alternar_senha.js
+        function alternarSenha() {
+            const campo = document.getElementById('password');
+            if (campo) {
+                campo.type = campo.type === 'password' ? 'text' : 'password';
+            }
+        }
+
+        // realizar_login.js
+        async function realizarLogin() {
+            const email = document.getElementById('email').value;
+            const senha = document.getElementById('password').value;
+
+            if (!email || !senha) {
+                alert("Ops! Você esqueceu de preencher o e-mail ou a senha. ✍️");
+                return;
+            }
+
+            try {
+                const { data, error } = await window.supabaseClient.auth.signInWithPassword({
+                    email: email,
+                    password: senha,
+                });
+
+                if (error) {
+                    console.error("Erro na autenticação:", error.message);
+                    alert("Erro ao entrar: " + error.message);
+                } else {
+                    console.log("Bem-vindo de volta!", data.user.email);
+                    window.location.href = 'index.html';
+                }
+            } catch (err) {
+                console.error("Ocorreu um erro inesperado no sistema:", err);
+            }
+        }
+
+        // realizar_cadastro.js
+        async function realizarCadastro() {
+            const email = document.getElementById('email').value;
+            const senha = document.getElementById('password').value;
+
+            if (!email || !senha) {
+                alert("Preencha e-mail e senha primeiro!");
+                return;
+            }
+
+            const { data, error } = await window.supabaseClient.auth.signUp({ 
+                email, 
+                password: senha 
+            });
+
+            if (error) {
+                alert("Erro no cadastro: " + error.message);
+            } else {
+                alert("Conta criada com sucesso! Verifique seu e-mail ou tente fazer login.");
+            }
+        }
+
+        function confirmarCadastro() {
+            const email = document.getElementById('email').value;
+            if (!email) return alert("Digite um e-mail!");
+            
+            if (confirm(`Deseja criar uma conta para: ${email}?`)) {
+                realizarCadastro(); 
+            }
+        }
+
+        // recuperar_senha.js
+        async function solicitarRecuperacao() {
+            const email = document.getElementById('email').value;
+            if (!email) return alert("Digite seu e-mail.");
+
+            const { error } = await window.supabaseClient.auth.resetPasswordForEmail(email, {
+                redirectTo: 'https://aristidesbp.github.io/assets/redefinir_senha.html',
+            });
+
+            if (error) alert(error.message);
+            else alert("Link enviado! Verifique sua caixa de entrada.");
+        }
+
+        // login_google.js
+        async function loginComGoogle() {
+            const { data, error } = await window.supabaseClient.auth.signInWithOAuth({
+                provider: 'google',
+                options: {
+                    redirectTo: window.location.origin + '/assets/app/index.html'
+                }
+            });
+
+            if (error) {
+                console.error("Erro no login Google:", error.message);
+                alert("Erro ao conectar com Google: " + error.message);
+            }
+        }
+    </script>
 </body>
 </html>
