--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         </div>
                         <h3 class="text-2xl font-black mb-4 group-hover:text-primary transition-colors">Sistema ERP Web</h3>
                         <p class="text-slate-400 leading-relaxed mb-8 flex-grow">Gestão empresarial completa com módulos de financeiro, entidades, e controle de vendas.</p>
-                        <a href="assets/erp/login.html" class="inline-flex items-center justify-center gap-2 px-6 py-4 bg-white/5 hover:bg-primary text-white font-bold rounded-xl transition-all border border-slate-border hover:border-primary">
+                        <a href="login.html" class="inline-flex items-center justify-center gap-2 px-6 py-4 bg-white/5 hover:bg-primary text-white font-bold rounded-xl transition-all border border-slate-border hover:border-primary">
                             Acessar Sistema <span class="material-symbols-outlined">open_in_new</span>
                         </a>
                     </div>
