--- a/index.html
+++ b/index.html
@@ -266,9 +266,19 @@
 <p class="text-slate-600 dark:text-slate-400 text-sm mb-6 flex-grow font-medium leading-relaxed">Campanhas de marketing orientadas por dados no Google Ads e Meta para maximizar o ROI e a visibilidade da sua marca.</p>
 <div class="flex items-center justify-between mt-auto pt-6 border-t border-slate-100 dark:border-slate-800">
 <span class="dark:text-white text-slate-900 font-bold">R$ 1.500,00</span>
+<!--
 <button class="px-4 py-2 bg-primary/10 hover:bg-primary text-primary hover:text-white rounded-lg text-xs font-bold transition-all flex items-center gap-2">
 <span class="material-symbols-outlined text-sm">add</span> Adicionar
                         </button>
+-->
+   <button 
+    data-name="Desenvolvimento Web" 
+    data-price="5000" 
+    class="add-to-cart-btn ...">
+    <span class="material-symbols-outlined text-sm">add</span> Adicionar
+   </button>
+
+        
 </div>
 </div>
 <div class="service-card bg-white dark:bg-slate-900/40 glass rounded-[12px] p-6 border border-slate-border-light dark:border-slate-border-dark transition-all duration-300 flex flex-col group shadow-sm">
@@ -384,4 +394,7 @@
 </div>
 </footer>
 
+
+<script src="src/controllers/CartController.js"></script>
+        
 </body></html>
