--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-[#f8fafc] font-display">
 <input class="hidden" id="mobile-menu-toggle" type="checkbox"/>
 <div class="fixed inset-0 bg-black/60 z-[60] hidden transition-opacity lg:hidden" id="menu-overlay"></div>
+
+        
+<!-- header index -->        
 <header class="fixed top-0 left-0 right-0 z-50 glass bg-white/70 dark:bg-[#0f172a]/60 border-b border-slate-border-light dark:border-slate-border-dark px-6 md:px-16 py-3">
 <div class="max-w-7xl mx-auto flex items-center justify-between">
 <div class="flex items-center gap-3">
@@ -90,6 +93,9 @@
 </div>
 </div>
 </header>
+
+
+        
 <div class="fixed top-0 right-0 w-80 h-full bg-white dark:bg-[#0f172a] z-[70] translate-x-full transition-transform duration-300 shadow-2xl lg:hidden flex flex-col" id="mobile-menu">
 <div class="p-6 flex items-center justify-between border-b border-slate-border-light dark:border-slate-border-dark">
 <div class="flex items-center gap-3">
