--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         
 <!-- header index -->        
-<script src="src/view/HeaderIndex.js"></script>
+<script src="src/views/index_header.js"></script>
 
 
         
