--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-[#f8fafc] font-display">
       
 <!-- header index -->   
-        <div id="ola_mundo"></div>
-<script src="src/views/ola_mundo.js"></script>
+<div id="index_header"></div>
+<script src="src/views/index_header.js"></script>
 
 
         
