--- a/login.html
+++ b/login.html
@@ -50,12 +50,12 @@
     </div>
     <!-- ############################################################################# --> 
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-    <script src="src/controller/supabase_config.js"></script>
-    <script src="src/controller/alternar_senha.js"></script>
-    <script src="src/controller/realizar_login.js"></script>
-    <script src="src/controller/realizar_cadastro.js"></script>
-    <script src="src/controller/recuperar_senha.js"></script>
-    <script src="src/controller/login_google.js"></script>
+    <script src="src/model/supabase_config.js"></script>
+    <script src="src/model/alternar_senha.js"></script>
+    <script src="src/model/realizar_login.js"></script>
+    <script src="src/model/realizar_cadastro.js"></script>
+    <script src="src/model/recuperar_senha.js"></script>
+    <script src="src/model/login_google.js"></script>
     <!-- ############################################################################# --> 
 </body>
 </html>
