--- a/assets/erp/entidades.html
+++ b/assets/erp/entidades.html
@@ -452,24 +452,44 @@ async function loadEntities() {
     renderTable(data || []);
 }
 
-
 function renderTable(data) {
     const tbody = document.getElementById('entities-list');
     if (!tbody) return;
 
-    tbody.innerHTML = data.map(e => `
+    tbody.innerHTML = data.map(e => {
+        // Limpa o telefone para o link do WhatsApp (mantém apenas números)
+        const foneLimpo = e.telefone ? e.telefone.replace(/\D/g, '') : '';
+        
+        return `
         <tr>
             <td><input type="checkbox" class="row-checkbox" value="${e.id}" onclick="updateSelectedCountEntities()"></td>
-            <td><strong>${e.nome_completo}</strong><br><small class="tag">${e.tipo_entidade || 'N/A'}</small></td>
+            <td><strong>${e.nome_completo}</strong><br><small class="tag">${e.relacionamento || 'N/A'}</small></td>
             <td>${e.telefone || '-'}<br><small>${e.email || '-'}</small></td>
-            <td><span class="status-tag">${e.status_entidade || 'Ativo'}</span></td>
+            <td><span class="status-tag">${e.status || 'Ativo'}</span></td>
             <td>
-                <button class="btn-edit" onclick="editFull('${e.id}')"><i class="fas fa-edit"></i></button>
-                <button class="btn-del" onclick="deleteEntity('${e.id}')"><i class="fas fa-trash"></i></button>
+                <button class="btn-edit" title="Editar" onclick="editFull('${e.id}')">
+                    <i class="fas fa-edit"></i>
+                </button>
+
+                <button class="btn-del" title="Excluir" onclick="deleteEntity('${e.id}')">
+                    <i class="fas fa-trash"></i>
+                </button>
+
+                ${foneLimpo ? `
+                <button class="btn-wpp" title="WhatsApp" onclick="window.open('https://wa.me/55${foneLimpo}', '_blank')">
+                    <i class="fab fa-whatsapp"></i>
+                </button>` : ''}
+
+                ${e.email ? `
+                <button class="btn-mail" title="Enviar E-mail" onclick="window.location.href='mailto:${e.email}'">
+                    <i class="fas fa-envelope"></i>
+                </button>` : ''}
             </td>
         </tr>
-    `).join('');
+    `}).join('');
 }
+
+    
 
 
 
