--- a/assets/erp/pdv.html
+++ b/assets/erp/pdv.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/pdv.css">
+    <link rel="stylesheet" href="assets/style/pdv.css">
 </head>
 <body class="bg-gray-100 font-sans">
     <div class="navbar">
@@ -85,6 +85,6 @@
 
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <script src="js/supabase_config.js"></script>
-    <script src="js/pdv_logic.js"></script>
+    <script src="src/controller/pdv.js"></script>
 </body>
 </html>
