--- a/assets/erp/testes.html
+++ b/assets/erp/testes.html
@@ -30,7 +30,7 @@
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             
-            <a href="src/views/entidades.html" class="nav-card bg-white p-6 rounded-2xl shadow-sm border border-slate-200 hover:shadow-xl group">
+            <a href="src/views/entidades_view.html" class="nav-card bg-white p-6 rounded-2xl shadow-sm border border-slate-200 hover:shadow-xl group">
                 <div class="w-14 h-14 bg-green-100 text-green-600 rounded-xl flex items-center justify-center mb-4 group-hover:bg-green-600 group-hover:text-white transition-colors">
                     <i class="fas fa-users text-2xl"></i>
                 </div>
