--- a/assets/erp/testes.html
+++ b/assets/erp/testes.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">   
 <!-- ############################################################################# -->     
-<link rel="stylesheet" href="assets/style/entidades.css">   
+<link rel="stylesheet" href="assets/style/style_entidades.css">   
 <!-- ############################################################################# --> 
 </head>
 <body>
@@ -128,6 +128,8 @@
         </table>
     </div>
 </div>
+
+<script src="src/controller/controller_entidades.js"></script>
 </body>
 </html>
     
