--- a/assets/erp/testes.html
+++ b/assets/erp/testes.html
@@ -129,6 +129,7 @@
     </div>
 </div>
 
+<script src="src/model/supabase_config.js"></script> 
 <script src="src/controller/controller_entidades.js"></script>
 </body>
 </html>
