--- a/assets/erp/testes.html
+++ b/assets/erp/testes.html
@@ -129,8 +129,12 @@
     </div>
 </div>
 
+    
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>     
 <script src="src/model/supabase_config.js"></script> 
 <script src="src/controller/controller_entidades.js"></script>
+
+
 </body>
 </html>
     
