--- a/assets/erp/testes.html
+++ b/assets/erp/testes.html
@@ -132,6 +132,8 @@
    
 <script src="https://unpkg.com/@supabase/supabase-js@2"></script>     
 <script src="src/model/supabase_config.js"></script> 
+<script src="src/model/verificar_login.js"></script> 
+<script src="src/model/model_entidades.js"></script>    
 <script src="src/controller/controller_entidades.js"></script>
 <script src="src/view/view_navbar.js"></script>
 <script src="src/view/view_list_entidades.js"></script>
