--- a/assets/erp/testes.html
+++ b/assets/erp/testes.html
@@ -135,7 +135,7 @@
 <script src="src/model/verificar_login.js"></script> 
 <script src="src/model/model_entidades.js"></script>    
 <script src="src/controller/controller_entidades.js"></script>
-<script src="src/view/view_navbar.js"></script>
+<script src="src/view/navbar.js"></script>
 <script src="src/view/view_list_entidades.js"></script>
     
 </body>
