--- a/assets/erp/testes.html
+++ b/assets/erp/testes.html
@@ -14,7 +14,9 @@
 </head>
 <body>
 
-
+<div id="navbar"></div>
+<script src="src/view/navbar.js"></script>
+   
 
    
 <script src="https://unpkg.com/@supabase/supabase-js@2"></script>     
@@ -22,7 +24,9 @@
 <script src="src/model/verificar_login.js"></script> 
 <script src="src/model/model_entidades.js"></script>    
 
-<script src="src/view/navbar.js"></script>
+
+
+   
 <script src="src/view/view_list_entidades.js"></script>
     
 <script src="src/controller/controller_entidades.js"></script>
