--- a/assets/erp/testes.html
+++ b/assets/erp/testes.html
@@ -14,9 +14,7 @@
 </head>
 <body>
 
-<div id="navbar"></div>
-<script src="src/view/navbar.js"></script>
-   
+
 
    
 <script src="https://unpkg.com/@supabase/supabase-js@2"></script>     
@@ -24,11 +22,15 @@
 <script src="src/model/verificar_login.js"></script> 
 <script src="src/model/model_entidades.js"></script>    
 
+<div id="navbar"></div>
+<script src="src/view/navbar.js"></script>
+   
 
+<div id="form_entidades"></div> 
+<script src="src/view/view_form_entidades.js"></script>  
 
    
-<script src="src/view/view_list_entidades.js"></script>
-    
+<script src="src/view/view_list_entidades.js"></script>  
 <script src="src/controller/controller_entidades.js"></script>
 
 </body>
