--- a/assets/erp/entidades.html
+++ b/assets/erp/entidades.html
@@ -21,12 +21,12 @@
 
 
 <div id="navbar"></div>
-<script src="src/view/navbar.js"></script>
+<script src="src/controller/navbar.js"></script>
    
 <div id="form_entidades"></div> 
-<script src="src/view/view_form_entidades.js"></script>  
+<script src="src/controller/entidades_form.js"></script>  
  
-<script src="src/view/view_list_entidades.js"></script>  
+<script src="src/controller/entidades_list.js"></script>  
 <script src="src/controller/controller_entidades.js"></script>
    
 
