--- a/assets/erp/index.html
+++ b/assets/erp/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISTEMA ERP ABP - Inicio</title>
-<script src="https://unpkg.com/@supabase/supabase-js@2"></script>   
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <link rel="stylesheet" href="assets/style/style_index.css">
+<link rel="stylesheet" href="assets/style/style_navbar.css">  
+
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>   
+<script src="src/model/supabase_config.js"></script>  
+<script src="src/model/verificar_login.js"></script>  
+
+    
 </head>
 <body>
     
