--- a/assets/erp/index.html
+++ b/assets/erp/index.html
@@ -18,7 +18,7 @@
 <body>
     
 <div id="navbar">
-<script src="src/controller/navbar.js">
+<script src="src/controller/navbar.js"></script>
 
 <div class="content">      
 <div class="grid">
