--- a/assets/erp/index.html
+++ b/assets/erp/index.html
@@ -25,12 +25,12 @@
 <div class="content">      
   <div class="grid">
 
-    <a href="src/view/entidades.html" class="card">
+    <a href="src/view/financeiro.html" class="card">
       <i class="fas fa-shopping-basket"></i>
       <h3>testes</h3>
     </a>
 
-    <a href="entidades.html" class="card">
+    <a href="src/view/entidades.html" class="card">
       <i class="fas fa-users"></i>
       <h3>Gestão de Entidades</h3>
     </a>
