--- a/assets/erp/login.html
+++ b/assets/erp/login.html
@@ -56,7 +56,7 @@
 </div>
     </div>
 <!-- FIM DO FORMULÁRIO -->
-<script src="src/controller/login.js">
+<script src="src/controller/login.js"></script>
 
 </body>
 </html>        
