--- a/assets/erp/index.html
+++ b/assets/erp/index.html
@@ -25,32 +25,25 @@
 <div class="content">      
   <div class="grid">
 
-    <a href="src/view/financeiro.html" class="card">
-      <i class="fas fa-shopping-basket"></i>
-      <h3>testes</h3>
-    </a>
 
     <a href="src/view/entidades.html" class="card">
       <i class="fas fa-users"></i>
       <h3>Gestão de Entidades</h3>
     </a>
 
-    <a href="financeiro.html" class="card">
+    <a href="src/view/financeiro.html" class="card">
       <i class="fas fa-hand-holding-usd"></i>
       <h3>Financeiro</h3>
     </a>
 
-    <a href="produtos.html" class="card">
+    <a href="src/view/produtos.html" class="card">
       <i class="fas fa-box"></i>
       <h3>Produtos</h3>
     </a>
 
-    <a href="vitrine.html" class="card">
-      <i class="fas fa-shopping-basket"></i>
-      <h3>Vitrine</h3>
-    </a>
+ 
 
-    <a href="pdv.html" class="card">
+    <a href="src/view/pdv.html" class="card">
       <i class="fas fa-shopping-basket"></i>
       <h3>PDV</h3>
     </a>
